[package]
name = "rusteze"
version = "0.1.0"
authors = ["Ranjith Raj D <rdhanasekar@broadsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.23.1"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
mockall = "0.7.1"
log = "0.4.8"
cfg-if = "0.1.10"
